# TrVentures_MVP_1

./: .gitattributes  .gitignore
CAD_Models/bme280-sensor-module/: BME280_SENSOR_MODULE.step
CAD_Models/desktop-prototype/: desktop-ptype-assem.SLDASM  main-base-v2.SLDPRT  mic_hold.SLDPRT
CAD_Models/inmp441-i2s-microphone-module/: INMP441 I2S Microphone Module v15.step
CAD_Models/raspberry-pi-pico-w1/: FCI_10103594-0001LF.step.SLDPRT  PicoW v1.step.SLDASM  RESC1005.step.SLDPRT  RF_SHIELD_PICOW.step.SLDPRT  RPI_RP2040.step.SLDPRT  RaspBerryPi Pico W-0.step.SLDPRT  RaspBerryPi Pico W-1.step.SLDPRT  RaspBerryPi Pico W-2.step.SLDPRT  RaspBerryPi Pico W-3.step.SLDPRT  RaspBerryPi Pico W-4.step.SLDPRT  RaspBerryPi Pico W-5.step.SLDPRT  RaspBerryPi Pico W-6.step.SLDPRT  RaspBerryPi Pico W-7.step.SLDPRT  RaspBerryPi Pico W.step.SLDPRT  RaspberryPi Pico W v2.step  Symbols.step.SLDASM
CAD_Models/sensirion-scd41/: scd40 v7.3mf  scd40 v7.step
Embbeded/: .gitignore  AI_CONTEXT.md  DEPLOYMENT_GUIDE.md  README.md  index.html  main.py  main_wifi_debug.py  pyproject.toml  scd4x.py
Embbeded/Test_QuestDB/: README.md  test_connection.py
Embbeded/docs/hardware/: README.md  wiring.yaml
Embbeded/questdb_test/: README.md  consumer_test.py  test_connection.py  test_ilp_insert.py
Embbeded/src/: boot.py  cloud_buffer.py  device_config.py  index.html  logger.py  main.py  remote_questdb_service.py  sensor_scd41.py  setup.html  timer_service.py  wifi.py
Embbeded/timer_service_test/: README.md  test_timer_service.py
