[tool.poetry]
name = "embbeded"
version = "0.1.0"
description = ""
authors = ["esteban_laptop_exotic <raulest50@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
